# ShiningEmulator

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  build.gradle  settings.gradle
SharedLib/: CMakeLists.txt  app.cpp  app.h  appplatform.cpp  appplatform.h  appstate.cpp  appstate.h  audiostreamer.cpp  audiostreamer.h  font.cpp  font.h  fontdefs.h  inputdefs.h  menu.cpp  menu.h  messagedefs.h  platformrenderer.h  renderconfig.cpp  renderconfig.h  renderer.cpp  renderer.h  rendererfactory.h  resource.cpp  resource.h  shader.cpp  shader.h  thread.cpp  thread.h  uidefs.h  uielements.cpp  uielements.h
SharedLib/gbc/: audiounit.cpp  audiounit.h  colourutils.h  debugutils.cpp  debugutils.h  debugwindowmodule.cpp  debugwindowmodule.h  frame.cpp  frame.h  framemanager.cpp  framemanager.h  gbc.cpp  gbc.h  inputset.cpp  inputset.h  romdefs.h  sgbmodule.cpp  sgbmodule.h  sram.cpp  sram.h
SharedLib/gbcapp/: gbcapp.cpp  gbcapp.h  gbcappstate.cpp  gbcappstate.h  gbcrenderer.cpp  gbcrenderer.h  gbcui.cpp  gbcui.h  uibuffers.h
ShiningEmulatorAndroid/: .gitignore  build.gradle  settings.gradle
ShiningEmulatorAndroid/app/: build.gradle
ShiningEmulatorAndroid/app/src/main/: AndroidManifest.xml
ShiningEmulatorAndroid/app/src/main/cpp/: CMakeLists.txt  android_main.cpp  androidappplatform.cpp  androidappplatform.h  androidaudiostreamer.cpp  androidaudiostreamer.h  androidrenderer.cpp  androidrenderer.h  androidrendererfactory.cpp  androidrendererfactory.h  androidresource.cpp  androidresource.h
ShiningEmulatorAndroid/app/src/main/java/com/grimace/shiningemulatorandroid/: MainActivity.java
ShiningEmulatorAndroid/app/src/main/res/values/: strings.xml
ShiningEmulatorAndroid/gradle/wrapper/: gradle-wrapper.properties
ShiningEmulatorWindows/: CMakeLists.txt  todo.md  windowsappplatform.cpp  windowsappplatform.h  windowsaudiostreamer.cpp  windowsaudiostreamer.h  windowsfilehelper.cpp  windowsfilehelper.h  windowsmain.cpp  windowsrenderer.cpp  windowsrenderer.h  windowsrendererfactory.cpp  windowsrendererfactory.h  windowsresource.cpp  windowsresource.h
ShiningEmulatorWindows/res/: res.h  res.rc
androidapp/: build.gradle
androidapp/src/main/: AndroidManifest.xml
androidapp/src/main/cpp/: CMakeLists.txt  android_main.cpp  androidappplatform.cpp  androidappplatform.h  androidaudiostreamer.cpp  androidaudiostreamer.h  androidrenderer.cpp  androidrenderer.h  androidresource.cpp  androidresource.h
androidapp/src/main/java/com/grimace/shiningemulatorandroid/: MainActivity.java
androidapp/src/main/res/values/: strings.xml
assets/: Musica.fnt
assets/gl/: fs_main.glsl  fs_normal.glsl  fs_text.glsl  vs_main.glsl  vs_normal.glsl
assets/gles/: fs_main.glsl  fs_normal.glsl  fs_text.glsl  vs_main.glsl  vs_normal.glsl
gradle/wrapper/: gradle-wrapper.properties
lib/glext/: glext.h
lib/libxbr-standalone/: CMakeLists.txt  filters.h  xbr.cpp
windowsapp/: todo.md  windowsappplatform.cpp  windowsappplatform.h  windowsaudiostreamer.cpp  windowsaudiostreamer.h  windowsfilehelper.cpp  windowsfilehelper.h  windowsmain.cpp  windowsrenderer.cpp  windowsrenderer.h  windowsresource.cpp  windowsresource.h
windowsapp/res/: res.h  res.rc
